# merabriar

./: .gitignore  README.md  build_android.sh
.github/workflows/: flutter-ci.yml
docs/: week7-integration.md  week8-polish-testing.md
docs/plans/: post-mvp-plan.md
flutter_app/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
flutter_app/android/: gradle.properties
flutter_app/android/app/: build.gradle.kts
flutter_app/integration_test/: app_test.dart
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/config/: app_theme.dart  router.dart  (+1 more)
flutter_app/test/: rust_bridge_test.dart  widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
go_core/: build_android.sh  coverage.txt  go.mod  main.go  merabriar_go.h
go_core/benchmark/: benchmark_test.go  storage_bench_test.go
go_core/crypto/: crypto.go  crypto_test.go
go_core/message/: message.go  message_test.go
go_core/storage/: storage.go  storage_test.go
go_core/sync/: queue.go  queue_test.go
go_core/transport/: transport.go
rust_core/: Cargo.toml
rust_core/.cargo/: config.toml
rust_core/benches/: core_benchmarks.rs
rust_core/src/: api.rs  frb_generated.rs  lib.rs
rust_core/src/crypto/: encryption.rs  key_management.rs  mod.rs  session.rs
rust_core/src/message/: mod.rs
rust_core/src/storage/: mod.rs
rust_core/src/sync/: mod.rs
rust_core/src/transport/: mod.rs
rust_core/tests/: integration_tests.rs
supabase/migrations/: 001_initial_schema.sql
(+43 files in other folders)
