[package]
name = "merabriar_core"
version = "0.1.0"
edition = "2021"
description = "Core engine for MeraBriar messenger"
authors = ["MeraBriar Team"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "merabriar_core"

[dependencies]
# FFI Bridge
flutter_rust_bridge = "=2.11.1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
ring = "0.17"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"

# Storage (using bundled SQLite for now - switch to SQLCipher later)
rusqlite = { version = "0.30", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "1"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# Async
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
opt-level = 3
strip = true
